updated DL lecture material

--- a/lectures/lectureSourceCodeAndFigures/DSTM-25FeedFordwardHandout.tex
+++ b/lectures/lectureSourceCodeAndFigures/DSTM-25FeedFordwardHandout.tex
@@ -47,6 +47,24 @@
 \maketitle
 \thispagestyle{fancy}
 
+\begin{figure}[h]
 \includegraphics[width=0.9\textwidth]{lectFF/nn.pdf}
+\caption{Neural Network}
+\end{figure}
+
+\begin{figure}[h]
+\includegraphics[width=0.9\textwidth]{lectFF/nnTerms.pdf}
+\caption{Terminology (2)}
+\end{figure}
+
+\begin{figure}[h]
+\includegraphics[width=0.9\textwidth]{lectFF/nnTerms2.pdf}
+\caption{Terminology (4)}
+\end{figure}
+
+\begin{figure}[h]
+\includegraphics[width=0.75\textwidth]{lectFF/nnEval.pdf}
+\caption{NN Evaluation}
+\end{figure}
 
 \end{document}
